--- a/ee.ria.qdigidoc4.yml
+++ b/ee.ria.qdigidoc4.yml
@@ -4,7 +4,6 @@ runtime: org.kde.Platform
 runtime-version: '6.7'
 sdk: org.kde.Sdk
 rename-icon: qdigidoc4
-rename-desktop-file: qdigidoc4.desktop
 rename-mime-file: qdigidoc4.xml
 rename-mime-icons: ["application-x-cdoc","application-vnd.etsi.asic-e+zip"]
 
@@ -196,4 +195,4 @@ modules:
       - install -Dm644 ee.ria.qdigidoc4.metainfo.xml $FLATPAK_DEST/share/metainfo/ee.ria.qdigidoc4.metainfo.xml
       - ln -s $FLATPAK_DEST/share/locale/et/LC_MESSAGES/nautilus-qdigidoc.mo $FLATPAK_DEST/share/locale/et/nautilus-qdigidoc.mo
       - ln -s $FLATPAK_DEST/share/locale/ru/LC_MESSAGES/nautilus-qdigidoc.mo $FLATPAK_DEST/share/locale/ru/nautilus-qdigidoc.mo
-      - desktop-file-edit --set-key=Exec --set-value="run.sh" /app/share/applications/qdigidoc4.desktop
+      - desktop-file-edit --set-key=Exec --set-value="run.sh" /app/share/applications/ee.ria.qdigidoc4.desktop
